--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <td><h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&#9993;&nbsp;&nbsp;<a href="./exam dates.html">Library</a></h1></td>
         </tr>
         <tr>
-            <th><a href="./all year.html/important.html">ANNA UNIVERSITY IMPORTANT QUESTION</a></th>
+            <th><a href="./important.html">ANNA UNIVERSITY IMPORTANT QUESTION</a></th>
             <td><iframe src="https://www.youtube.com/embed/gk6Jri1kGTs?feature=shared" width="300" height="150"  frameborder="0" allowfullscreen></iframe></td>
             <td><iframe src="https://www.youtube.com/embed/SGC4ME9cU_Q?feature=shared"  width="300" height="150" frameborder="0"></iframe></td>
             <td><iframe src="https://www.youtube.com/embed/MHJ9r09LnKk?feature=shared" width="300" height="150" frameborder="0"></iframe></td>
