--- a/reopen.html
+++ b/reopen.html
@@ -10,20 +10,20 @@
         }
     </style>
 </head>
-<body>
+<body><center>
     <table>
         <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td><iframe width="200" height="315" src="https://www.youtube.com/embed/OyJ8fvouL04?si=pwYDhLDdVKB85XDI" title="YouTube video player" frameborder="0" ></iframe></td>
+            <td><iframe width="200" height="315" src="https://www.youtube.com/embed/SmPr-gzqUzw?si=0QhHKFaguT6oDYlo" title="YouTube video player" frameborder="0" ></iframe></td>
+            <td><iframe width="200" height="315" src="https://www.youtube.com/embed/DfSRJWpSHbM?si=sLCaj_Ke145PaspW" title="YouTube video player" frameborder="0" ></iframe></td>
+            <td><iframe width="200" height="315" src="https://www.youtube.com/embed/lJD9DqPkCy8?si=LLV8io-G8iZm6l9Z" title="YouTube video player" frameborder="0" ></iframe></td>
         </tr>
         <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td><iframe width="200" height="315" src="https://www.youtube.com/embed/9ROeyAdc6HA?si=nhkusrXXYWD98wA0" title="YouTube video player" frameborder="0" ></iframe></td>
+            <td><iframe width="200" height="315" src="https://www.youtube.com/embed/8lBhga4a-Nc?si=omKmuCRaOsIBBrj5" title="YouTube video player" frameborder="0" ></iframe></td>
+            <td><iframe width="200" height="315" src="https://www.youtube.com/embed/8X0oipxgKh4?si=qlY7bGPpE1VMtjyE" title="YouTube video player" frameborder="0" ></iframe></td>
+            <td><iframe width="200" height="315" src="https://www.youtube.com/embed/Rm7Kf6ZfO9Y?si=ea5hack9vOUN-LX9" title="YouTube video player" frameborder="0" ></iframe></td>
         </tr>
-    </table>
+    </table></center>
 </body>
 </html>
